# outlier-aware-series

./: .gitignore  LICENSE  README.md  pyproject.toml  test_manual.py
outlier_aware_series/: __init__.py  core.py
tests/: test_core.py
